--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>Undangan Pernikahan</h1>
     <p>Kami mengundang Anda untuk hadir dalam acara pernikahan kami:</p>
     <h2>xxx</h2>
-    <p class="date">Rabu, 08 Oktober 2025<br> Pukul 10.00 WIB</p>
+    <p class="date">Rabu, 08 Oktober 2025<br> Pukul 10.00 WIB - Selesai</p>
     <p class="location">Rumah mempelai wanita</p>
     <p>Dengan penuh rasa syukur, kami mengharapkan kehadiran Anda untuk merayakan hari bahagia kami.</p>
     <p>Terima kasih atas perhatian dan doa restu Anda.</p>
@@ -47,7 +47,7 @@
     <a class="rsvp-button" href="https://wa.me/6275460902" target="_blank">Konfirmasi Kehadiran</a>
     <p>
         <audio id="bg-music" autoplay loop controls class="audio-control">
-            <source src="bgmusic.m4a" type="audio/mpeg"/>
+            <source src="bgmusic.m4a" type="audio/m4a"/>
         </audio>
     </p>
     <script>
